--- a/web/officer_feedback.xhtml
+++ b/web/officer_feedback.xhtml
@@ -58,24 +58,15 @@
         <ui:insert class="content">
 
             <div class="w3-container w3-content w3-center w3-padding-64" style=" min-height:720px" id="feedback">
-                <h:panelGrid columns="2" style="border: solid 1px" columnClasses="col,col" width="35%">
 
-                    <f:facet name="caption">
-                        <h:outputText value="Feedback"/>
-                    </f:facet>
-
-                    <h:outputLabel value="Name"/>
-                    <h:outputLabel value="Message"/>
-                    <ui:repeat var="item" value="#{feedbackManagedBean.fbs}">
-                        <h:column>
-                            <h:outputText value="#{item}"/>
-                            <br/>
-                        </h:column>
-
-                    </ui:repeat>
-                </h:panelGrid>
+                <table class="table-feedback" border="1" style="border: solid 1px" width="40%">
+                    <caption align="center">Customer Feedback</caption>
+                    <thead><th>Name</th><th>Feedback</th></thead>
+                    <h:outputText escape="false" value="#{feedbackManagedBean.display()}"/>
+                </table>
 
             </div>
+
         </ui:insert>
     </h:body>
 
