--- a/web/officer_facility.xhtml
+++ b/web/officer_facility.xhtml
@@ -26,7 +26,7 @@
             body {font-family: "Lato", sans-serif}
             .mySlides {display: none}
         </style>
-        <title>Facilitiy Management</title>
+        <title>Facility Management</title>
     </h:head>
     <h:body>
         <!-- Navbar -->
