--- a/web/officer_home_page.xhtml
+++ b/web/officer_home_page.xhtml
@@ -29,7 +29,7 @@
 
                 <p>HOME</p>
             </a>
-            <a href="officer_user.xhtml" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+            <a href="officer_user.xhtml" class="w3-bar-item w3-button w3-padding-large w3-hover-black" target="main">
                 <i class="fa fa-user w3-xxlarge" />
 
                 <p>USER</p>
@@ -44,7 +44,7 @@
 
                 <p>FEEDBACK</p>
             </a>
-            <a href="officer_message.xhtml" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+            <a href="officer_message.xhtml" class="w3-bar-item w3-button w3-padding-large w3-hover-black" target="main">
                 <i class="fa fa-envelope w3-xxlarge" />
 
                 <p>MESSAGE</p>
