--- a/web/officer_message.xhtml
+++ b/web/officer_message.xhtml
@@ -60,7 +60,7 @@
                 <table class="table-feedback" border="1" style="border: solid 1px" width="40%">
                     <caption align="center">Customer Feedback</caption>
                     <thead><th>Name</th><th>Feedback</th></thead>
-                    <h:outputText escape="false" value="#{feedbackManagedBean.display()}"/>
+                    <h:outputText escape="false" value="#{contactManagedBean.receive()}"/>
                 </table>
 
             </div>
